seedboxk8s/applications/clustergit/Deployment.gitserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitserver
  namespace: clustergit
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: clustergit
  template:
    metadata:
      labels:
        app: clustergit
    spec:
      containers:
        - image: registry.${clusterTld}/clustergit/clustergit:latest
          name: gitserver
          ports:
            - containerPort: 22
          volumeMounts:
            # Note that because we are using subpaths,
            # we have to restart the container before any changes to the ConfigMap or Secret take effect.
            - mountPath: "/etc/ssh/sshd_config"
              name: sshd-config
              subPath: sshd_config
            - mountPath: "/authorized_keys"
              name: authorized-keys
            - mountPath: "/etc/ssh/ssh_host_ed25519_key"
              name: ssh-host-keys
              subPath: ssh_host_ed25519_key
            - mountPath: "/etc/ssh/ssh_host_ed25519_key.pub"
              name: ssh-host-keys
              subPath: ssh_host_ed25519_key.pub
            - mountPath: "/home/git/repositories"
              name: clustergit-repositories
              readOnly: false
      imagePullSecrets:
        - name: registry-k8s-dockerconfigjson
      volumes:
        - name: sshd-config
          configMap:
            name: sshd-config
            defaultMode: 0600
        - name: ssh-host-keys
          secret:
            secretName: ssh-host-keys
        - name: clustergit-repositories
          persistentVolumeClaim:
            claimName: clustergit-repositories-pvc
