seedboxk8s/applications/clustergit/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitserver
  namespace: clustergit
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  serviceName: gitserver
  selector:
    matchLabels:
      app: clustergit
  template:
    metadata:
      labels:
        app: clustergit
    spec:
      containers:
        - image: registry.${productionClusterFqdn}/clustergit/clustergit:latest@sha256:547270b88446b80b257a493af7d8021fda928dd8003040c15c1497447568ca55
          name: gitserver
          ports:
            - containerPort: 22
          volumeMounts:
            # Note that because we are using subpaths,
            # we have to restart the container before any changes to the ConfigMap or Secret take effect.
            - mountPath: "/etc/ssh/sshd_config"
              name: sshd-config
              subPath: sshd_config
            - mountPath: "/authorized_keys"
              name: authorized-keys
            - mountPath: "/etc/ssh/ssh_host_ed25519_key"
              name: ssh-host-keys
              subPath: ssh_host_ed25519_key
            - mountPath: "/etc/ssh/ssh_host_ed25519_key.pub"
              name: ssh-host-keys
              subPath: ssh_host_ed25519_key.pub
            - mountPath: "/home/git/repositories"
              name: clustergit-repositories-lvm
              readOnly: false
      imagePullSecrets:
        - name: registry-k8s-dockerconfigjson
      volumes:
        - name: data-import-helper
          configMap:
            name: data-import-helper
        - name: import
          emptyDir: {}
        - name: sshd-config
          configMap:
            name: sshd-config
            defaultMode: 0600
        - name: authorized-keys
          configMap:
            name: authorized-keys
        - name: ssh-host-keys
          secret:
            secretName: ssh-host-keys
            defaultMode: 0600
        - name: clustergit-repositories-lvm
          persistentVolumeClaim:
            claimName: clustergit-repositories-lvm-pvc
