seedboxk8s/applications/clustergit/Service.gitserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitserver
  namespace: clustergit
  labels:
    app: clustergit
spec:
  ports:
    - port: 22
  selector:
    app: clustergit
