seedboxk8s/applications/clustergit/IngressRouteTCP.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitserver-ssh-ingress
  namespace: clustergit
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - clustergit-ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: gitserver
          port: 22
